I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> Unhandled Runtime Error: Hydration failed because the server rendered HTML didn't match the client. As a result this tree will be regenerated on the client. This can happen if a SSR-ed Client Component used:. Error source: - A server/client branch `if (typeof window !== 'undefined')`.
> - Variable input such as `Date.now()` or `Math.random()` which changes each time it's called.
> - Date formatting in a user's locale which doesn't match the server.
> - External changing data without sending a snapshot of it along with the HTML.
> - Invalid HTML tag nesting.
>
> It can also happen if the client has a browser extension installed which messes with the HTML before React loaded.
>
> See more info here: https://nextjs.org/docs/messages/react-hydration-error
>
>   ...
>     <HotReload assetPrefix="" globalError={[...]}>
>       <AppDevOverlay state={{nextId:1, ...}} globalError={[...]}>
>         <AppDevOverlayErrorBoundary globalError={[...]} onError={function bound dispatchSetState}>
>           <ReplaySsrOnlyErrors>
>           <DevRootHTTPAccessFallbackBoundary>
>             <HTTPAccessFallbackBoundary notFound={<NotAllowedRootHTTPFallbackError>}>
>               <HTTPAccessFallbackErrorBoundary pathname="/" notFound={<NotAllowedRootHTTPFallbackError>} ...>
>                 <RedirectBoundary>
>                   <RedirectErrorBoundary router={{...}}>
>                     <Head>
>                     <link>
>                     <script>
>                     <script>
>                     <script>
>                     <RootLayout>
>                       <html lang="en" suppressHydrationWarning={true}>
>                         <body className="geist_e531...">
>                           <QueryProvider>
>                             <QueryClientP

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_GENAI_API_KEY=
+GOOGLE_GENAI_API_KEY=AIzaSyARlAbjQAFL9VVg1yojy3Um-9QQXt_Le9c
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
