--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:9002
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
